<?xml version="1.0"?>
<package>
  <name>hsrb_common</name>
  <version>0.14.1</version>
  <description>Common robot model and settings of HSR-B</description>
  <maintainer email="akiyoshi_ochiai@mail.toyota.co.jp">Akiyoshi Ochiai</maintainer>
  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hsrb_description</run_depend>
  <run_depend>hsrb_common_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
