<?xml version="1.0"?>
<package>
  <name>hsrb_common</name>
  <version>0.20.4</version>
  <description>Common robot model and settings of HSR-B</description>
  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>
  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hsrb_description</run_depend>
  <run_depend>hsrb_common_config</run_depend>
  <run_depend>hsrb_parts_description</run_depend>
  <run_depend>hsrc_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
