<package>
  <name>hsrb_common_config</name>
  <version>0.20.2</version>
  <description>HSRの実機・Gazebo共通設定ファイル</description>
  <maintainer email="kazuto_murase_aa@mail.toyota.co.jp">Kazuto Murase</maintainer>

  <license>TMC</license>

  <author>Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
