<package>
  <name>hsrb_description</name>
  <version>0.17.3</version>
  <description>HSRのロボット定義ファイル</description>
  <maintainer email="koji_terada@mail.toyota.co.jp">Koji Terada</maintainer>
  <maintainer email="akiyoshi_ochiai@mail.toyota.co.jp">Akiyoshi Ochiai</maintainer>

  <license>TMC</license>

  <url type="website">None</url>

  <author>Koji Terada</author>
  <author>Akiyoshi Ochiai</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>rosbash</build_depend>
  <build_depend>hsrb_parts_description</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>hsrb_parts_description</run_depend>

  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>urdfdom_py</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>joint_state_publisher</test_depend>
</package>
