<?xml version="1.0"?>
<package format="3">
  <name>hsrb_description</name>
  <version>0.20.5</version>
  <description>HSRのロボット定義ファイル</description>
  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>

  <license>TMC</license>

  <url type="website">None</url>

  <author>Koji Terada</author>
  <author>Akiyoshi Ochiai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hsrb_parts_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
