<?xml version="1.0"?>
<package format="3">
  <name>hsrb_parts_description</name>
  <version>0.20.5</version>
  <description>HSRのロボット定義共通ファイル</description>
  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>

  <license>TMC</license>

  <url type="website">None</url>

  <author>Tamaki Nishino</author>
  <author>Akiyoshi Ochiai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>

