<package format="3">
  <name>hsrb_parts_description</name>
  <version>2.2.0</version>
  <description>HSR's robot definition common file</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>

  <author>Tamaki Nishino</author>
  <author>Akiyoshi Ochiai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../" />
  </export>
</package>