<package>
  <name>tmc_hsrb_description</name>
  <version>1.0.0</version>
  <description>HSRのロボット定義ファイルを置く</description>
  <maintainer email="maintainer@mail.toyota.co.jp">Koji Terada</maintainer>

  <license>TMC</license>

  <url type="website">None</url>

  <author>Koji Terada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>

</package>